k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tick.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tick-auth-srv
                port:
                  number: 8080
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tick-users-srv
                port:
                  number: 8080
